GETools changelog

v0.0.11
- [UI] added Color Palette window for colors analysis
- in progress | [TOOLS] added Locators baking to Aim space
- in progress | [RIGGING] added Aim Constraint logic
- updated UI module

v0.0.10
- [TOOLS] added custom bake cut outside logic
- [TOOLS] added float field for locator scale
- [UI] extracted rigging module from Tools and created new Rigging category
- [UI] moved "Print selected objects to console" button from Tools/Select to Utils pop-up menu
-

v0.0.9 - reinstall required
- [CRITICAL] fixed support for Maya 2020, removed circular dependencies
- [UI] added restart and close getools pop-ups
- [UI] added tear off popup menus
- updated drag and drop script
- updated utils scripts structure
- added test button for move commands to shelf
- added Installer module
- added Types library
- added Layers module with base logic
- added labelImage parameter to ShelfButton function

v0.0.8 - reinstall required
- [CRITICAL] fixed issue with importing modules to avoid namespace intersections with other scripts
- [CRITICAL] restructured folders, changed root naming
- [UI] reworked docking logic
- updated shelf button installer

v0.0.7
- [UI] tweaked buttons order, colors and sizes
- [UI] changed some buttons text to be more compact
- [UI] updated help links, added version history link
- [TOOLS] improved "Locators relative + reverse" function, added right click pop-up with alternative mode
- [TOOLS] added "Print Selected To Console" button
- [TOOLS] fixed small errors for RotateOrderVisibility and JointDrawStyle
- [EXPERIMENTAL] improved Motion Trail buttons usability

v0.0.6
- [OVERLAPPY] added Cached Playback auto deactivation
- general window cleanup

v0.0.5 - First released version
- integrated Tools module
- integrated Overlappy module
- integrated Center Of Mass module
- integrated utilities scripts
- added annotations for most UI elements
- added drag and drop installer
- added docking window feature
- general cleanup of all old files